[tool.poetry]
name = "eagerx_pybullet"
version = "0.1.11"
description = "This repository contains the eagerx_pybllet package, which allows to simulate systems with EAGERx using pybullet."
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
license = "Apache 2.0"
homepage = "https://github.com/eager-dev/eagerx"
repository = "https://github.com/eager-dev/eagerx_packages"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.7"
eagerx = "^0.1.38"
pybullet = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.4"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.1.0"
flake8= ">=3"
flake8-bugbear = "^22.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_pybullet/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"